2003-08-23  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* boot-grub.pl.in: (gst_boot_grub_edit_entry): removed, no longer
	  neccesary, now boot-conf only deletes and adds entries. 
	  Added support for Hurd. 
	  (gst_boot_grub_entry_is_valid): added.
	  (gst_boot_grub_entries_set): made it to ignore the entries it can't
	  understand.
	* boot.pl.in: added support for grub, made it to ignore the entries it
	  can't understand.

2003-08-21  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* services.pl.in: added verbose runlevel description

2003-08-21  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* Makefile.am: removed some unused backends from installing, removed
	  runlevel-conf.in and added services-conf.in
	* services.pl.in: some changes to make it more services oriented
	* services-conf.in: added
	* runlevel-conf.in: removed

2003-08-11  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* boot-grub.pl.in, boot.pl.in: reverted again the path finding stuff, 
	  don't know how, but I mixed old and new patches misteriously :-/

2003-08-11  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* boot-grub.pl.in: added password support for grub entries,
	  changed the way it finds out the path to the kernel image
	* boot-lilo.pl.in: added password support for lilo entries
	* boot.pl.in: added general password support

2003-08-11  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* xml.pl.in: made it to ignore any whitespace or carriage return
	  at the beginning of the xml when parsing

2003-08-09  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* general.pl.in: added a carriage return for synchronism with the
	  frontend

2003-07-09  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* platform.pl.in: s/Mandrake\ Linux/Linux\ Mandrake/ in PLATFORM_INFO,
	and made MDK 9.1 codename "Bamboo". Fixes bug #116864

2003-06-25  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* network-conf.in, network.pl.in, platform.pl.in, runlevel-conf.in,